--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -24,4 +24,8 @@ jobs:
     - name: Run tests
       run: |
         bundle exec rake
-        bundle exec cucumber
+        bundle exec cucumber    
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
