--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -23,7 +23,7 @@ jobs:
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Run tests
       run: |
-        bundle exec rake
+        rake rake
         bundle exec cucumber    
     - name: Coveralls
       uses: coverallsapp/github-action@master
