--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,7 +22,7 @@ jobs:
         ruby-version: 3.0.2
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Run tests
-      run: 
+      run: |
         bundle exec rake
         bundle exec cucumber    
     - name: Coveralls
