--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -25,7 +25,6 @@ jobs:
       run: |
         bundle exec rake
         bundle exec cucumber    
-    - name: Coveralls
-      uses: coverallsapp/github-action@master
+    - uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
