--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
-        github-token: ${{ secrets.REPO_TOKEN_COVERALLS }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
